# rustexamples

./: Cargo.toml  README.md
a10_commands/: a01_rustup.md  a10_rustc.md  a20_cargo.md
src/a10_Commands/: a20_cargo.md
src/a20_Terminologies/: a10_prelude.md  a20_Associated_Functions.md  a25_Reference_Variable.md  a28_Cargo.md  a30_Crate.md  a40_Ownership.md  b10_Crate_Binary_Library.md  b15_Package.md  b20_Cargo_Workspaces.md  b22_Paths.md  b25_Modules_n_use.md  b30_Attribute.md  z10_Others.md
src/a20_Terminologies/examples/: ownership.rs
src/a30_Syntax/: a10_Variables.md  a12_const.md  a20_Functions.md  a25_Macros.md  a30_Import_Library.md  a32_traits_n_implementation.md  a33_match.md  a35_loop.md  a40_if_expression.md  a45_if_let.md
src/a40_Libraries_n_Methods/: a10_io.md
src/a40_Useful_Libraries_n_Functions/: a10_io.md
src/a45_Useful_Macros/: a05_println!.md
src/a50_Important_Types/: a10_Result.md  a15_Numeric_Types.md  a20_Compond_Types.md  a30_slice_type.md  a30_slice_type.rs  a35_struct.md  a35_struct_n_methods.md  a40_Tuple_struct.md  a43_Unit_Like_Struct.md  a50_enum.md  a60_common_collections.md
src/a60_Error_Handling/: a10_Error_Handling.md
src/a70_Writing_Tests/: a10_Unit_Tests.md  a20_Integrations_Tests.md
src/a80_Closures_n_Iterators/: a10_Closures.md  a20_Iterators.md
src/z10_Useful_tools/: a10_tools.md
